@@ -277,15 +277,15 @@
 <schema name="view.competenceCourseInformation" type="org.fenixedu.academic.domain.degreeStructure.CompetenceCourseInformation" bundle="APPLICATION_RESOURCES">
 		<slot name="executionPeriod.executionYear.year" key="label.executionYear"/>
 <!-- 		<slot name="executionPeriod.name" key="label.executionPeriod"/> -->
-		<slot name="departmentUnit" key="label.department">
+		<slot name="competenceCourse.departmentUnit" key="label.department">
 			<property name="format" value="${acronym}" />
 		</slot>
 </schema>    
 
 
 <schema name="view.competenceCourseInformation.details" type="org.fenixedu.academic.domain.degreeStructure.CompetenceCourseInformation" bundle="BOLONHA_MANAGER_RESOURCES">
-	<slot name="departmentUnit.name"/>
-	<slot name="scientificAreaUnit.name"/>
+	<slot name="competenceCourse.departmentUnit.name"/>
+<!-- 	<slot name="scientificAreaUnit.name"/> -->
 	<slot name="competenceCourseGroupUnit.name"/>
 	<slot name="name"/>
 	<slot name="nameEn"/>
